--- a/docker/services/frontend/html/config-hmm.html
+++ b/docker/services/frontend/html/config-hmm.html
@@ -575,6 +575,7 @@
             <button class="tab-btn" onclick="showTab('scoring')">&#127919; Trade Scoring</button>
             <button class="tab-btn" onclick="showTab('training')">&#9881; Training</button>
             <button class="tab-btn" onclick="showTab('validation')">&#128203; Validierung</button>
+            <button class="tab-btn" onclick="showTab('scheduling')">&#128197; Scheduling</button>
         </div>
 
         <!-- Overview Tab -->
@@ -982,6 +983,89 @@
                 <div id="reload-result" style="margin-top: 1rem;"></div>
             </div>
         </div>
+
+        <!-- Scheduling Tab -->
+        <div id="tab-scheduling" class="tab-content">
+            <!-- Scheduler Status -->
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">&#128197; Scheduler Status</h3>
+                    <button class="btn btn-primary btn-sm" onclick="loadSchedulerStatus()">&#8635; Aktualisieren</button>
+                </div>
+                <div id="scheduler-status">
+                    <div class="loading"><div class="spinner"></div></div>
+                </div>
+            </div>
+
+            <div class="grid-2-equal">
+                <!-- Schedule List -->
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">&#128203; Training-Schedules</h3>
+                    </div>
+                    <div id="schedule-list">
+                        <div class="loading"><div class="spinner"></div></div>
+                    </div>
+                </div>
+
+                <!-- Create Schedule -->
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">&#10133; Neuer Schedule</h3>
+                    </div>
+                    <div class="form-group">
+                        <label>Intervall</label>
+                        <select class="form-control" id="schedule-interval">
+                            <option value="hourly">Stündlich</option>
+                            <option value="daily" selected>Täglich</option>
+                            <option value="weekly">Wöchentlich</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Stunde (UTC, 0-23)</label>
+                        <input type="number" class="form-control" id="schedule-hour" value="3" min="0" max="23">
+                    </div>
+                    <div class="form-group" id="weekday-group" style="display: none;">
+                        <label>Wochentag</label>
+                        <select class="form-control" id="schedule-weekday">
+                            <option value="0">Montag</option>
+                            <option value="1">Dienstag</option>
+                            <option value="2">Mittwoch</option>
+                            <option value="3">Donnerstag</option>
+                            <option value="4">Freitag</option>
+                            <option value="5">Samstag</option>
+                            <option value="6">Sonntag</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Timeframe</label>
+                        <select class="form-control" id="schedule-timeframe">
+                            <option value="1h" selected>H1</option>
+                            <option value="4h">H4</option>
+                            <option value="1day">D1</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Lookback (Tage)</label>
+                        <input type="number" class="form-control" id="schedule-lookback" value="365" min="30" max="730">
+                    </div>
+                    <div class="form-group">
+                        <label>
+                            <input type="checkbox" id="schedule-train-hmm" checked> HMM trainieren
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label>
+                            <input type="checkbox" id="schedule-train-scorer" checked> Scorer trainieren
+                        </label>
+                    </div>
+                    <div class="info-box" style="margin-bottom: 1rem;">
+                        <strong>Hinweis:</strong> Leere Symbol-Liste = Alle Symbole aus dem Data Service werden trainiert.
+                    </div>
+                    <button class="btn btn-success" onclick="createSchedule()">&#10133; Schedule erstellen</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -1098,6 +1182,24 @@
             if (days > 0) return `${days}d ${hours}h`;
             if (hours > 0) return `${hours}h ${mins}m`;
             return `${mins}m`;
+        }
+
+        // Format DateTime (ISO to local display)
+        function formatDateTime(isoString) {
+            if (!isoString) return '-';
+            try {
+                const date = new Date(isoString);
+                return date.toLocaleString('de-CH', {
+                    day: '2-digit',
+                    month: '2-digit',
+                    year: 'numeric',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    timeZoneName: 'short'
+                });
+            } catch (e) {
+                return isoString;
+            }
         }
 
         // Get Regime Display
@@ -2046,6 +2148,199 @@
             }
         }
 
+        // ==================== Scheduling Functions ====================
+
+        async function loadSchedulerStatus() {
+            const statusContainer = document.getElementById('scheduler-status');
+            const listContainer = document.getElementById('schedule-list');
+
+            try {
+                const response = await fetch(`${TRAIN_API_BASE}/schedules`);
+                const data = await response.json();
+
+                // Status display
+                const status = data.scheduler_status || {};
+                statusContainer.innerHTML = `
+                    <div class="grid-2-equal" style="margin-bottom: 1rem;">
+                        <div class="stat-item">
+                            <span class="stat-label">Scheduler</span>
+                            <span class="stat-value">${status.running ? '&#9989; Aktiv' : '&#10060; Inaktiv'}</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">Schedules</span>
+                            <span class="stat-value">${status.active_schedules || 0} / ${status.total_schedules || 0}</span>
+                        </div>
+                    </div>
+                    ${status.next_scheduled_run ? `
+                        <div class="info-box">
+                            <strong>Nächster geplanter Lauf:</strong><br>
+                            Schedule: ${status.next_scheduled_run.schedule_id}<br>
+                            Zeit: ${formatDateTime(status.next_scheduled_run.next_run)}<br>
+                            Intervall: ${formatInterval(status.next_scheduled_run.interval)}
+                        </div>
+                    ` : '<div class="info-box">Keine aktiven Schedules</div>'}
+                `;
+
+                // Schedule list
+                const schedules = data.schedules || [];
+                if (schedules.length === 0) {
+                    listContainer.innerHTML = `
+                        <div class="info-box">
+                            Keine Schedules konfiguriert. Erstellen Sie einen neuen Schedule rechts.
+                        </div>
+                    `;
+                } else {
+                    listContainer.innerHTML = schedules.map(s => `
+                        <div class="version-card" style="margin-bottom: 1rem;">
+                            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                                <div>
+                                    <strong>${s.schedule_id}</strong>
+                                    <span class="status-badge ${s.enabled ? 'status-deployed' : 'status-rejected'}">
+                                        ${s.enabled ? 'Aktiv' : 'Inaktiv'}
+                                    </span>
+                                </div>
+                                <div style="display: flex; gap: 0.5rem;">
+                                    <button class="btn btn-sm ${s.enabled ? 'btn-warning' : 'btn-success'}"
+                                            onclick="toggleSchedule('${s.schedule_id}', ${!s.enabled})">
+                                        ${s.enabled ? '&#10074;&#10074; Pause' : '&#9658; Start'}
+                                    </button>
+                                    <button class="btn btn-sm btn-primary" onclick="triggerSchedule('${s.schedule_id}')">
+                                        &#9658; Jetzt
+                                    </button>
+                                    <button class="btn btn-sm btn-danger" onclick="deleteSchedule('${s.schedule_id}')">
+                                        &#128465;
+                                    </button>
+                                </div>
+                            </div>
+                            <div style="margin-top: 0.5rem; font-size: 0.85rem; color: #aaa;">
+                                <div><strong>Intervall:</strong> ${formatInterval(s.interval)}</div>
+                                <div><strong>Modelle:</strong> ${s.train_hmm ? 'HMM' : ''} ${s.train_scorer ? 'Scorer' : ''}</div>
+                                <div><strong>Timeframe:</strong> ${s.timeframe}</div>
+                                <div><strong>Lookback:</strong> ${s.lookback_days} Tage</div>
+                                <div><strong>Symbole:</strong> ${s.symbols ? s.symbols.join(', ') : 'Alle'}</div>
+                                ${s.next_run ? `<div><strong>Nächster Lauf:</strong> ${formatDateTime(s.next_run)}</div>` : ''}
+                                ${s.last_run ? `<div><strong>Letzter Lauf:</strong> ${formatDateTime(s.last_run)} (${s.last_status || 'unbekannt'})</div>` : ''}
+                            </div>
+                        </div>
+                    `).join('');
+                }
+
+            } catch (error) {
+                statusContainer.innerHTML = `<div class="info-box" style="color: #e57373;">Fehler: ${error.message}</div>`;
+                listContainer.innerHTML = '';
+            }
+        }
+
+        function formatInterval(interval) {
+            const intervals = {
+                'hourly': 'Stündlich',
+                'daily': 'Täglich',
+                'weekly': 'Wöchentlich'
+            };
+            return intervals[interval] || interval;
+        }
+
+        async function createSchedule() {
+            const interval = document.getElementById('schedule-interval').value;
+            const hour = parseInt(document.getElementById('schedule-hour').value);
+            const weekday = parseInt(document.getElementById('schedule-weekday').value);
+            const timeframe = document.getElementById('schedule-timeframe').value;
+            const lookback = parseInt(document.getElementById('schedule-lookback').value);
+            const trainHmm = document.getElementById('schedule-train-hmm').checked;
+            const trainScorer = document.getElementById('schedule-train-scorer').checked;
+
+            try {
+                const response = await fetch(`${TRAIN_API_BASE}/schedules`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        interval: interval,
+                        custom_hour: hour,
+                        custom_weekday: weekday,
+                        timeframe: timeframe,
+                        lookback_days: lookback,
+                        train_hmm: trainHmm,
+                        train_scorer: trainScorer,
+                        symbols: null,  // null = all symbols
+                        enabled: true
+                    })
+                });
+
+                const data = await response.json();
+                if (response.ok) {
+                    showToast('Schedule erstellt', 'success');
+                    loadSchedulerStatus();
+                } else {
+                    showToast(`Fehler: ${data.detail || 'Unbekannt'}`, 'error');
+                }
+            } catch (error) {
+                showToast(`Fehler: ${error.message}`, 'error');
+            }
+        }
+
+        async function toggleSchedule(scheduleId, enabled) {
+            try {
+                const response = await fetch(`${TRAIN_API_BASE}/schedules/${scheduleId}/toggle?enabled=${enabled}`, {
+                    method: 'POST'
+                });
+                if (response.ok) {
+                    showToast(`Schedule ${enabled ? 'aktiviert' : 'pausiert'}`, 'success');
+                    loadSchedulerStatus();
+                } else {
+                    const data = await response.json();
+                    showToast(`Fehler: ${data.detail || 'Unbekannt'}`, 'error');
+                }
+            } catch (error) {
+                showToast(`Fehler: ${error.message}`, 'error');
+            }
+        }
+
+        async function triggerSchedule(scheduleId) {
+            try {
+                const response = await fetch(`${TRAIN_API_BASE}/schedules/${scheduleId}/trigger`, {
+                    method: 'POST'
+                });
+                if (response.ok) {
+                    showToast('Training wird innerhalb 1 Minute gestartet', 'success');
+                } else {
+                    const data = await response.json();
+                    showToast(`Fehler: ${data.detail || 'Unbekannt'}`, 'error');
+                }
+            } catch (error) {
+                showToast(`Fehler: ${error.message}`, 'error');
+            }
+        }
+
+        async function deleteSchedule(scheduleId) {
+            if (!confirm(`Schedule "${scheduleId}" wirklich löschen?`)) return;
+
+            try {
+                const response = await fetch(`${TRAIN_API_BASE}/schedules/${scheduleId}`, {
+                    method: 'DELETE'
+                });
+                if (response.ok) {
+                    showToast('Schedule gelöscht', 'success');
+                    loadSchedulerStatus();
+                } else {
+                    const data = await response.json();
+                    showToast(`Fehler: ${data.detail || 'Unbekannt'}`, 'error');
+                }
+            } catch (error) {
+                showToast(`Fehler: ${error.message}`, 'error');
+            }
+        }
+
+        // Show/hide weekday selector based on interval
+        document.addEventListener('DOMContentLoaded', () => {
+            const intervalSelect = document.getElementById('schedule-interval');
+            if (intervalSelect) {
+                intervalSelect.addEventListener('change', () => {
+                    const weekdayGroup = document.getElementById('weekday-group');
+                    weekdayGroup.style.display = intervalSelect.value === 'weekly' ? 'block' : 'none';
+                });
+            }
+        });
+
         // Initialize
         document.addEventListener('DOMContentLoaded', () => {
             loadInfo();
@@ -2059,6 +2354,14 @@
             if (validationTabBtn) {
                 validationTabBtn.addEventListener('click', () => {
                     loadValidationStatus();
+                });
+            }
+
+            // Load scheduler status when tab is shown
+            const schedulingTabBtn = document.querySelector('.tab-btn:nth-child(6)');
+            if (schedulingTabBtn) {
+                schedulingTabBtn.addEventListener('click', () => {
+                    loadSchedulerStatus();
                 });
             }
         });
